# springrs-template

./: .bakerignore  .devcontainer  .dockerignore  .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.lock.baker.j2  Cargo.toml.baker.j2  Dockerfile.baker.j2  README.md  agents.md  agents.md.baker.j2  baker.yaml  deny.toml.baker.j2  docker-compose.yml  docker-compose.yml.baker.j2  e2e  macros.jinja  mise.toml  mise.toml.baker.j2  recipe.json.baker.j2  rustfmt.toml.baker.j2  {% if 'github' in ci_cd%}.github{% endif %}  {% if 'grpc' in features %}build.rs.baker.j2{% endif %}  {% if 'grpc' in protocols %}build.rs.baker.j2{% endif %}  {% if 'grpc' in protocols %}proto{% endif %}  {% if 'helm' in features %}helm{% endif %}  {% if 'shadcn-admin-kit'==frontend%}frontend{% endif %}  {% if use_seaorm_migrations %}migration{% endif %}
.config/: nextest.toml.baker.j2
.devcontainer/: Dockerfile  devcontainer.json
config/: app.toml
crates/{%if database=='postgres'%}models{% endif %}/: Cargo.toml
crates/{%if database=='postgres'%}models{% endif %}/src/: lib.rs  models
frontend/: package.json  pnpm-lock.yaml  tsconfig.json
migration/: Cargo.toml
sample/: README.md  answers-grpc.json  answers-rest-jwt.json  answers-rest-shadcn.json  answers-rest.json
samples/: answers-all-protocols.json  answers-axum-diesel.json  answers-grpc.json  answers-mixed-protocols.json  answers-rest-jwt.json  answers-rest-leptos.json  answers-rest-rls.json  answers-rest-shadcn.json  answers-rest.json
src/: lib.rs.baker.j2  main.rs.baker.j2  (+8 more)
(+276 files in other folders)
