[package]
name = "models"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
automod = "1.0"
sea-orm = { version = "2.0.0-rc.30", features = ["sqlx-postgres","runtime-tokio-rustls","macros","with-chrono","with-json","with-uuid","schema-sync","entity-registry","rbac"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"